Creación de un bloque
Los bloques contienen la parte lógica que se emplea en las plantillas

Haremos uso de la vista previamente creada en el modulo de Pfay_Contacts
Mas información --> https://github.com/PerezContrerasLuis/magento240App/commit/45789fd18703c5aa685e462b826d3bb23c510bb9

1.- Creamos nuestro bloque:
	app/code/Pfay/Contacts/Block/Contactslist.php
2.- Enlazamos nuestro bloque con nuestro template, para eso modificamos nuestro LAYOUT
3.- Modificamos nuestro template para hacer uso de los métodos de nuestro bloque.

4.- recompilamos y asignamos permisos
	php bin/magento setup:upgrade
	php bin/magento setup:di:compile
	chmod -R 777 var/ pub/

5.- verificamos resultados en el navegador WEB:
	http://magento240.local/contacts/test/index

--- a/code/Pfay/Contacts/view/frontend/templates/test_index.phtml
+++ b/code/Pfay/Contacts/view/frontend/templates/test_index.phtml
@@ -1,3 +1,46 @@
 <div id="contactslist">
-    my contact list
+    <h2>empty</h2>
+    <table>
+        <tr>
+            <th>Name</th>
+        </tr>
+        <?php $contacts = $this->getData('contacts'); ?>
+        <?php foreach ($contacts as $contact): ?>
+            <tr>
+                <td><?php echo $contact ?></td>
+            </tr>
+        <?php endforeach; ?>
+        <tr>
+            <td>there is no contact in this list</td>
+        </tr>
+    </table>
+
+
+    <h2>10 éléments</h2>
+    <table>
+        <tr>
+            <th>Name</th>
+        </tr>
+        <?php $this->addContacts(10); ?>
+        <?php $contacts = $this->getData('contacts'); ?>
+        <?php foreach ($contacts as $contact): ?>
+            <tr>
+                <td><?php echo $contact ?></td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
+
+    <h2>20 éléments</h2>
+    <table>
+        <tr>
+            <th>Name</th>
+        </tr>
+        <?php $this->addContacts(10); ?>
+        <?php $contacts = $this->getData('contacts'); ?>
+        <?php foreach ($contacts as $contact): ?>
+            <tr>
+                <td><?php echo $contact ?></td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
 </div>
