Carga de JS personalizado
Objetivo in integrar js personalizado :

1.- para este ejemplo se tiene que tener un modulo registrado
2.-  creamos controlador que extiende al template
	app/code/Learning/Js/Controller/Index/Index.php
3.- Creamos block
	app/code/Learning/Js/Block/Index.php

4.- Creamos ruta para front end:
	app/code/Learning/Js/etc/frontend/routes.xml

5.- Creamos  template :
	app/code/Learning/Js/view/frontend/templates/hello.phtml

6.- Creamos nuestro layout que enlaza nuestro template :
	app/code/Learning/Js/view/frontend/layout/learningjs_index_index.xml

	OJO el nombre del layout tiene que ser : {FRONTNAE}+{CARPETACONTROLADOR}+{ACCCION}

=======================  Aquí se explica cómo agregar el JS personalizado.   ========================

7.- Creaos nuestro archivo requirejs-config.js
	app/code/Learning/Js/view/frontend/requirejs-config.js

8.- Agregamos nuestro archivo con el script :
	app/code/Learning/Js/view/frontend/web/js/hello.js

Mas información de : https://devdocs.magento.com/guides/v2.4/javascript-dev-guide/javascript/custom_js.html.

--- a/code/Learning/Js/view/frontend/templates/hello.phtml
+++ b/code/Learning/Js/view/frontend/templates/hello.phtml
@@ -1,3 +1,3 @@
-<div data-mage-init='{"hello": {"message": "HELLO WORLD!"}}'>
-    Content
+<div data-mage-init='{"hello": {"message": "You clicked!"}}'>
+    <div id="clk"> CLICK HERE <div>
 </div>
