Carga de widget
Impementacion de un widget que muestra un POPUP

Mas información de como integrar JS detalladamente -> https://github.com/PerezContrerasLuis/magento240App/commit/15c9d5953d11d14329781e2af3f52484d8091d21

Mas información de  WIDGET : https://devdocs.magento.com/guides/v2.4/javascript-dev-guide/widgets/widget-popup-window.html.

--- a/code/Learning/Js/view/frontend/templates/hello.phtml
+++ b/code/Learning/Js/view/frontend/templates/hello.phtml
@@ -1,3 +1,24 @@
 <div data-mage-init='{"hello": {"message": "You clicked!"}}'>
     <div id="clk"> CLICK HERE <div>
 </div>
+
+
+<div>
+    <a href="#" class="action" title="Open Customer Login"
+    data-mage-init='{"popupWindow": {
+            "windowURL": "/customer/account/login",
+            "windowName": "customer-login",
+            "width": 400,
+            "height": 400,
+            "left": 0,
+            "top": 0,
+            "resizable": 1,
+            "scrollbars": 1,
+            "status": 1,
+            "menubar": 1
+        }}'>
+        <span>PopupWindow widget</span>
+    </a>
+</div>
+
+
