Mostrara mensaje popup UI Magento component
1.- se agrego script que crea un PopUp

Si quiere mas información de como integrar js puede consultar este commit ->  https://github.com/PerezContrerasLuis/magento240App/commit/15c9d5953d11d14329781e2af3f52484d8091d21

--- a/code/Learning/Js/view/frontend/templates/hello.phtml
+++ b/code/Learning/Js/view/frontend/templates/hello.phtml
@@ -22,3 +22,38 @@
 </div>
 
 
+
+<div id='popup-modal'>
+        <h1> Hi I'm here.... </h1>
+    </div>
+    <script>
+        require(
+            [
+                'jquery',
+                'Magento_Ui/js/modal/modal'
+            ],
+            function(
+                $,
+                modal
+            ) {
+                var options = {
+                    type: 'popup',
+                    responsive: true,
+                    innerScroll: true,
+                    title: 'popup modal title',
+                    buttons: [{
+                        text: $.mage.__('Continue'),
+                        class: '',
+                        click: function () {
+                            this.closeModal();
+                        }
+                    }]
+                };
+    
+                var popup = modal(options, $('#popup-modal'));
+    
+                $('#popup-modal').modal('openModal');
+            }
+        );
+    </script>
+
