Reusando modulo con MAP map nos permite agregar alias a rutas locales y reutilizarlas 1.- agregamos map a reuirejs-config , creamos alias y le asignamos el path 2.- el alias creado en map ahora lo usamos para hacer referencia a al modulo en nuestro phtml

--- a/code/JavaScriptDev/JsFun/view/frontend/templates/block-promo-effects.phtml
+++ b/code/JavaScriptDev/JsFun/view/frontend/templates/block-promo-effects.phtml
@@ -1,5 +1,5 @@
 <script>
-    require(['jquery','JavaScriptDev_JsFun/js/fade-in-element'],function($,fadeInElement){
+    require(['jquery','fadeInElement'],function($,fadeInElement){
         'use strict'
 
         $(function(){
