--- a/code/JavaScriptDev/JsFun/view/frontend/templates/vue-test.phtml
+++ b/code/JavaScriptDev/JsFun/view/frontend/templates/vue-test.phtml
@@ -1,14 +1,12 @@
 <div id="vue-test">
     <h1>{{ message }}</h1>
 </div>
-<script>
-    require(['vue'],function(Vue){
-    'use strict'
-        new Vue({
-            el:'#vue-test',
-            data:{
-                message : 'This is test LuisPC '
+<script type="text/x-magento-init">
+    {
+        "#vue-test":{
+            "JavaScriptDev_JsFun/js/vue-test":{
+                "message":"Declarative text"
             }
-        })
-    })
+        }
+    }
 </script>
